@@ -25,3 +25,13 @@ around IPMI 1.5 session sequence numbers that are the wrong endian.
 Those hitting this issue may see "session timeout" errors.  Issue
 observed on some Sun ILOM 1.0/2.0 (depends on service processor
 endian).
+.LP
+\fInoauthcodecheck\fR - This workaround flag will tell FreeIPMI to not
+check the authentication codes returned from IPMI 1.5 command
+responses.  It works around systems to return invalid authentication
+codes due to hashing or implementation errors.  Users are cautioned on
+the use of this option, as it removes an authentication check
+verifying the validity of a packet.  However, in most organizations,
+this is unlikely to be a security issue.  Those hitting this issue may
+see "connection timeout", "session timeout", or "password verification
+timeout" errors.  Issue observed on Xyratex FB-H8-SRAY.
